--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         .pdf-button:hover {
             background-color: #45a049;
         }
+        /* Estilos responsivos */
+        @media (max-width: 600px) {
+            .pdf-button {
+                width: 100%;
+            }
+        }
     </style>
     <script>
         function mostrarFormulario(opcion) {
