--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
             background-color: #45a049;
         }
         /* Estilos responsivos */
-        @media (max-width: 600px) {
+        /* Estilos responsivos para dispositivos móviles */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 24px;
+            }
+
             .pdf-button {
                 width: 100%;
+                font-size: 14px;
             }
         }
     </style>
