--- a/index.html
+++ b/index.html
@@ -57,16 +57,21 @@
         .pdf-button:hover {
             background-color: #45a049;
         }
-        /* Estilos responsivos */
         /* Estilos responsivos para dispositivos móviles */
         @media (max-width: 768px) {
             h1 {
-                font-size: 24px;
+                font-size: 28px;
+            }
+
+            label,
+            select,
+            .pdf-button {
+                font-size: 18px;
             }
 
             .pdf-button {
                 width: 100%;
-                font-size: 14px;
+                padding: 12px;
             }
         }
     </style>
