--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Formulario con descarga de PDF</title>
+    <title>Formulario GeoGym</title>
     <style>
         body {
             font-family: Arial, sans-serif;
