--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </head>
 
 <body>
-    <h1>Formulario con descarga de PDF</h1>
+    <h1>DISEÑO DE TU RUTINA DE ENTRENAMIENTO</h1>
     <form>
         <label for="genero">¿Eres hombre o mujer?</label>
         <select id="genero" onchange="mostrarFormulario(this.value)">
