--- a/index.html
+++ b/index.html
@@ -4,41 +4,111 @@
 <head>
     <title>Formulario GeoGym</title>
     <style>
+        @import url(//fonts.googleapis.com/css?family=Lato:300:400);
+
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
         }
 
+
         h1 {
-            color: #333;
+            font-family: 'Lato', sans-serif;
+            font-weight: 300;
+            letter-spacing: 2px;
+            font-size: 48px;
+        }
+
+        p {
+            font-family: 'Lato', sans-serif;
+            letter-spacing: 1px;
+            font-size: 14px;
+            color: #333333;
+        }
+
+
+        .header {
+            position: relative;
+            text-align: center;
+            background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
+            color: white;
+        }
+
+        .logo {
+            width: 50px;
+            fill: white;
+            padding-right: 15px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        .inner-header {
+            height: 65vmax;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .flex {
+            /*Flexbox for containers*/
+            display: inline-flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
         }
 
+        .flex2 {
+            /*Flexbox for containers*/
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        /**Aqui Inicia seccion formulario*/
         form {
             margin-bottom: 20px;
+            max-width: 300px;
+            margin: 10px auto;
+            padding: 10px 20px;
+            border-radius: 8px;
         }
 
         label {
-            display: block;
+            display: flex;
             font-weight: bold;
             margin-bottom: 5px;
+            justify-content: start;
+            align-items: start;
+            text-align: start;
         }
 
         select {
             width: 100%;
             padding: 10px;
             font-size: 16px;
-        }
-
-        .formulario-container {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
+            color: #333;
+            background-color: #f2f2f2;
         }
 
         h2 {
             color: #333;
-            margin-top: 0;
+            margin: 0;
+
+        }
+
+        input {
+            width: 100%;
+            margin-bottom: 5px;
+            color: #333;
+            background-color: #f2f2f2;
+        }
+
+        .formulario-container {
+            display: inline-block;
+            padding: 20px;
+            margin-bottom: 20px;
         }
 
         .pdf-button {
@@ -75,6 +145,78 @@
                 padding: 12px;
             }
         }
+
+        /*Aqui termina seccion formulario*/
+
+
+        .waves {
+            position: relative;
+            width: 100%;
+            height: 15vh;
+            margin-bottom: -7px;
+            /*Fix for safari gap*/
+            min-height: 100px;
+            max-height: 150px;
+        }
+
+        .content {
+            position: relative;
+            height: 20vh;
+            text-align: center;
+            background-color: white;
+        }
+
+        /* Animation */
+
+        .parallax>use {
+            animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
+        }
+
+        .parallax>use:nth-child(1) {
+            animation-delay: -2s;
+            animation-duration: 7s;
+        }
+
+        .parallax>use:nth-child(2) {
+            animation-delay: -3s;
+            animation-duration: 10s;
+        }
+
+        .parallax>use:nth-child(3) {
+            animation-delay: -4s;
+            animation-duration: 13s;
+        }
+
+        .parallax>use:nth-child(4) {
+            animation-delay: -5s;
+            animation-duration: 20s;
+        }
+
+        @keyframes move-forever {
+            0% {
+                transform: translate3d(-90px, 0, 0);
+            }
+
+            100% {
+                transform: translate3d(85px, 0, 0);
+            }
+        }
+
+        /*Shrinking for mobile*/
+        @media (max-width: 768px) {
+            .waves {
+                height: 40px;
+                min-height: 40px;
+            }
+
+            .content {
+                height: 30vh;
+            }
+
+            h1 {
+                font-size: 24px;
+            }
+        }
     </style>
     <script>
         function mostrarFormulario(opcion) {
@@ -93,19 +235,19 @@
 
             if (objetivo === "bajar_grasa") {
                 if (experiencia === "principiante") {
-                    window.location.href = "PP HOMBRES.pdf";
+                    window.location.href = "PP HOMBRES_Parte1.pdf";
                 } else if (experiencia === "intermedio") {
-                    window.location.href = "PP HOMBRES.pdf";
+                    window.location.href = "PP HOMBRES_Parte2.pdf";
                 } else if (experiencia === "avanzado") {
-                    window.location.href = "PP HOMBRES.pdf";
+                    window.location.href = "PP HOMBRES_Parte3.pdf";
                 }
             } else if (objetivo === "aumentar_muscular") {
                 if (experiencia === "principiante") {
-                    window.location.href = "AM HOMBRES.pdf";
+                    window.location.href = "AM HOMBRES_Parte1.pdf";
                 } else if (experiencia === "intermedio") {
-                    window.location.href = "AM HOMBRES.pdf";
+                    window.location.href = "AM HOMBRES_Parte2.pdf";
                 } else if (experiencia === "avanzado") {
-                    window.location.href = "AM HOMBRES.pdf";
+                    window.location.href = "AM HOMBRES_Parte3.pdf";
                 }
             }
         }
@@ -116,19 +258,19 @@
 
             if (objetivoMujer === "bajar_grasa") {
                 if (experienciaMujer === "principiante") {
-                    window.location.href = "PP MUJERES.pdf";
+                    window.location.href = "PP MUJERES_Parte1.pdf";
                 } else if (experienciaMujer === "intermedio") {
-                    window.location.href = "PP MUJERES.pdf";
+                    window.location.href = "PP MUJERES_Parte2.pdf";
                 } else if (experienciaMujer === "avanzado") {
-                    window.location.href = "PP MUJERES.pdf";
+                    window.location.href = "PP MUJERES_Parte3.pdf";
                 }
             } else if (objetivoMujer === "aumentar_muscular") {
                 if (experienciaMujer === "principiante") {
-                    window.location.href = "AM MUJERES.pdf";
+                    window.location.href = "AM MUJERES_Parte1.pdf";
                 } else if (experienciaMujer === "intermedio") {
-                    window.location.href = "AM MUJERES.pdf";
+                    window.location.href = "AM MUJERES_Parte2.pdf";
                 } else if (experienciaMujer === "avanzado") {
-                    window.location.href = "AM MUJERES.pdf";
+                    window.location.href = "AM MUJERES_Parte3.pdf";
                 }
             }
         }
@@ -155,93 +297,139 @@
                 experienciaContainerMujer.style.display = "none";
             }
         }
+
     </script>
 </head>
 
 <body>
-    <h1>DISEÑO DE TU RUTINA DE ENTRENAMIENTO</h1>
-    <form>
-        <label for="genero">¿Eres hombre o mujer?</label>
-        <select id="genero" onchange="mostrarFormulario(this.value)">
-            <option value="">Selecciona una opción</option>
-            <option value="hombre">Hombre</option>
-            <option value="mujer">Mujer</option>
-        </select>
-    </form>
+    <div class="header">
 
-    <div id="formularioHombre" class="formulario-container" style="display: none;">
-        <h2>Formulario para hombres</h2>
-        <form>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" required>
+        <!--Content before waves-->
+        <div class="inner-header flex">
+            <!--Just the logo.. Don't mind this-->
+            <svg version="1.1" class="logo" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" xml:space="preserve">
+                <path fill="#FFFFFF" stroke="#000000" stroke-width="10" stroke-miterlimit="10" d="M57,283" />
+                <g>
+                    <path fill="#fff"
+                        d="M250.4,0.8C112.7,0.8,1,112.4,1,250.2c0,137.7,111.7,249.4,249.4,249.4c137.7,0,249.4-111.7,249.4-249.4
+                            C499.8,112.4,388.1,0.8,250.4,0.8z M383.8,326.3c-62,0-101.4-14.1-117.6-46.3c-17.1-34.1-2.3-75.4,13.2-104.1
+                            c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3,62.4c-19.8,19.1-51.6,26.9-100.2,24.6l1.8-39.7		c35.9,1.6,59.7-2.9,70.8-13.6c8.9-8.6,11.1-22.9,13.5-39.6c6.3-42,14.8-99.4,141.4-99.4h41L333,166c-12.6,16-45.4,68.2-31.2,96.2	c9.2,18.3,41.5,25.6,91.2,24.2l1.1,39.8C390.5,326.2,387.1,326.3,383.8,326.3z" />
+                </g>
+            </svg>
+            <h1>DISEÑO DE TU RUTINA DE ENTRENAMIENTO</h1>
 
-            <br>
+            <div id="SeccionFormulario">
+                <form>
+                    <label for="genero">¿Eres hombre o mujer?</label>
+                    <select id="genero" onchange="mostrarFormulario(this.value)">
+                        <option value="">Selecciona una opción</option>
+                        <option value="hombre">Hombre</option>
+                        <option value="mujer">Mujer</option>
+                    </select>
+                </form>
 
-            <label for="edad">Edad:</label>
-            <input type="number" id="edad" required>
+                <div id="formularioHombre" class="formulario-container" style="display: none;">
+                    <h2>Formulario para hombres</h2>
+                    <form>
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" required>
 
-            <br>
+                        <br>
 
-            <label for="objetivo">Objetivo principal:</label>
-            <select id="objetivo" onchange="mostrarExperiencia(this.value)">
-                <option value="">Selecciona una opción</option>
-                <option value="bajar_grasa">Bajar tu porcentaje de grasa corporal</option>
-                <option value="aumentar_muscular">Aumentar tu masa muscular</option>
-            </select>
+                        <label for="edad">Edad:</label>
+                        <input type="number" id="edad" min="12" required>
 
-            <div id="experienciaContainer" style="display: none;">
-                <label for="experiencia">Experiencia en entrenamiento de fuerza:</label>
-                <select id="experiencia">
-                    <option value="">Selecciona una opción</option>
-                    <option value="principiante">Principiante (6 meses o menos entrenando)</option>
-                    <option value="intermedio">Intermedio (de 6 meses a 1 año entrenando)</option>
-                    <option value="avanzado">Avanzado (más de 1 año entrenando)</option>
-                </select>
+                        <br>
+
+                        <label for="objetivo">Objetivo principal:</label>
+                        <select id="objetivo" onchange="mostrarExperiencia(this.value)">
+                            <option value="">Selecciona una opción</option>
+                            <option value="bajar_grasa">Bajar tu porcentaje de grasa corporal</option>
+                            <option value="aumentar_muscular">Aumentar tu masa muscular</option>
+                        </select>
+
+                        <div id="experienciaContainer" style="display: none;">
+                            <label for="experiencia">Experiencia en entrenamiento de fuerza:</label>
+                            <select id="experiencia">
+                                <option value="">Selecciona una opción</option>
+                                <option value="principiante">Principiante (6 meses o menos entrenando)</option>
+                                <option value="intermedio">Intermedio (de 6 meses a 1 año entrenando)</option>
+                                <option value="avanzado">Avanzado (más de 1 año entrenando)</option>
+                            </select>
+                        </div>
+
+                        <br>
+
+                        <input type="button" class="pdf-button" value="Descargar PDF" onclick="descargarPDFHombres()">
+                    </form>
+                </div>
+
+
+                <div id="formularioMujer" class="formulario-container" style="display: none;">
+                    <h2>Formulario para mujeres</h2>
+                    <form>
+                        <label for="nombreMujer">Nombre:</label>
+                        <input type="text" id="nombreMujer" required>
+
+                        <br>
+
+                        <label for="edadMujer">Edad:</label>
+                        <input type="number" id="edadMujer" min="12" required>
+
+                        <br>
+
+                        <label for="objetivoMujer">Objetivo principal:</label>
+                        <select id="objetivoMujer" onchange="mostrarExperiencia(this.value)">
+                            <option value="">Selecciona una opción</option>
+                            <option value="bajar_grasa">Bajar tu porcentaje de grasa corporal</option>
+                            <option value="aumentar_muscular">Aumentar tu masa muscular</option>
+                        </select>
+
+                        <div id="experienciaContainerMujer" style="display: none;">
+                            <label for="experienciaMujer">Experiencia en entrenamiento de fuerza:</label>
+                            <select id="experienciaMujer">
+                                <option value="">Selecciona una opción</option>
+                                <option value="principiante">Principiante (6 meses o menos entrenando)</option>
+                                <option value="intermedio">Intermedio (de 6 meses a 1 año entrenando)</option>
+                                <option value="avanzado">Avanzado (más de 1 año entrenando)</option>
+                            </select>
+                        </div>
+
+                        <br>
+
+                        <input type="button" class="pdf-button" value="Descargar PDF" onclick="descargarPDFMujeres()">
+                    </form>
+                </div>
             </div>
+        </div>
 
-            <br>
+        <!--Waves Container-->
+        <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                    <path id="gentle-wave"
+                        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                </defs>
+                <g class="parallax">
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                    <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                </g>
+            </svg>
+        </div>
+        <!--Waves end-->
 
-            <input type="button" class="pdf-button" value="Descargar PDF" onclick="descargarPDFHombres()">
-        </form>
     </div>
+    <!--Header ends-->
 
-
-    <div id="formularioMujer" class="formulario-container" style="display: none;">
-        <h2>Formulario para mujeres</h2>
-        <form>
-            <label for="nombreMujer">Nombre:</label>
-            <input type="text" id="nombreMujer" required>
-
-            <br>
-
-            <label for="edadMujer">Edad:</label>
-            <input type="number" id="edadMujer" required>
-
-            <br>
-
-            <label for="objetivoMujer">Objetivo principal:</label>
-            <select id="objetivoMujer" onchange="mostrarExperiencia(this.value)">
-                <option value="">Selecciona una opción</option>
-                <option value="bajar_grasa">Bajar tu porcentaje de grasa corporal</option>
-                <option value="aumentar_muscular">Aumentar tu masa muscular</option>
-            </select>
-
-            <div id="experienciaContainerMujer" style="display: none;">
-                <label for="experienciaMujer">Experiencia en entrenamiento de fuerza:</label>
-                <select id="experienciaMujer">
-                    <option value="">Selecciona una opción</option>
-                    <option value="principiante">Principiante (6 meses o menos entrenando)</option>
-                    <option value="intermedio">Intermedio (de 6 meses a 1 año entrenando)</option>
-                    <option value="avanzado">Avanzado (más de 1 año entrenando)</option>
-                </select>
-            </div>
-
-            <br>
-
-            <input type="button" class="pdf-button" value="Descargar PDF" onclick="descargarPDFMujeres()">
-        </form>
+    <!--Content starts-->
+    <div class="content flex2">
+        <p>GeoGym |GymSport S.A. De C.V </p>
     </div>
-
+    <!--Content ends-->
 </body>
 
 </html>
