--- a/index.html
+++ b/index.html
@@ -78,18 +78,19 @@
         label {
             display: flex;
             font-weight: bold;
-            margin-bottom: 5px;
             justify-content: start;
             align-items: start;
             text-align: start;
         }
 
         select {
+            display: block;
             width: 100%;
-            padding: 10px;
+            padding: 5px;
             font-size: 16px;
             color: #333;
             background-color: #f2f2f2;
+            border-radius: 4px;
         }
 
         h2 {
@@ -99,10 +100,16 @@
         }
 
         input {
-            width: 100%;
-            margin-bottom: 5px;
-            color: #333;
-            background-color: #f2f2f2;
+           display: block;
+            width: 97%;
+            font-size: 16px;
+            color: #202124;
+            font-family: arial, sans-serif;
+            padding: 5px;
+            background: white;
+            border: 1px solid #dfe1e5;
+            border-radius: 4px;
+            height: auto;
         }
 
         .formulario-container {
